--- a/views/partials/SideBarAdmin.hbs
+++ b/views/partials/SideBarAdmin.hbs
@@ -30,7 +30,7 @@
                 </a>
             </li>
             <li class="sidebar-icon li-products">
-                <a class=" li-products" href="/admin/products">
+                <a class=" li-products" href="/admin/viewListCourse">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <span>Products</span>
                 </a>
