--- a/views/partials/headerUser.hbs
+++ b/views/partials/headerUser.hbs
@@ -33,11 +33,13 @@
                 {{!-- <a href="/logout">Logout</a> --}}
             </div>
             <div class="profile-dropdown">
+                {{#each userList as |user|}}
                 <div onclick="toggle()" class="profile-dropdown-btn">
                     <div class="profile-img">
                         <img src="/images/{{user.avatar}}" alt="">
                     </div>
                 </div>
+                {{/each}}
 
                 <ul class="profile-dropdown-list">
                     <li class="profile-dropdown-list-item">
