--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -9,14 +9,12 @@
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <title>Document</title>
+
 </head>
 
 <body>
     <div class="container">
-
-
         <div class="wrapper-header">
             <div class="login-interface row">
                 <div class="col-6  content-login">
@@ -44,12 +42,9 @@
                                 <div class="input">
                                     <i class="ti-lock"></i>
                                     <div class="input-data">
-
-
-                                        <input type="password" id="input-password" placeholder="Password" name="password">
+                                        <input type="password" id="input-password" placeholder="Password"
+                                            name="password">
                                     </div>
-
-
                                 </div>
                             </div>
                         </form>
@@ -61,11 +56,8 @@
 
                             <a href="/forget-password" class="text-data forget-password">Forget Password?</a>
                         </div>
-
-
-
                         <div class="btn">
-                            <button class="btn-login"  onclick="login()">Login Now</button>
+                            <button class="btn-login" onclick="login()">Login Now</button>
                             <button class="btn-create-account">Create Account</button>
                         </div>
 
@@ -73,16 +65,16 @@
                         <div class="text-data pd-20-0">Or you can join with</div>
 
                         <div class="login-other-method">
-                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a href="/auth/google"></a></img>
+                            <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a
+                                href="/auth/google"></a></img>
                         </div>
                     </div>
 
                 </div>
-                <div class="discriptions col-6">
+                {{!-- <div class="discriptions col-6">
                     <div class="wrapper-logo">
                         <img class="logo" src="assets\img\logo.png" alt="">
                     </div>
-
                     <div class="wrapper-discriptions">
                         <div class="discription">
                             <div class="header-discription">
@@ -141,56 +133,21 @@
                         </div>
                     </div>
 
-                </div>
+                </div> --}}
             </div>
         </div>
 
 
     </div>
-
-
-
-    </div>
-
-    </div>
-
-    <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
-    
     <script>
-        // Bắt sự kiện khi hình ảnh được bấm
-        document.getElementById("clickableImage").addEventListener("click", function() {
-            // Chuyển đến trang hoặc tab mới
-            window.location.href = "https://www.example.com"; // Thay thế địa chỉ URL bằng trang mà bạn muốn chuyển đến.
-        });
-    </script> 
-        </div>
-    </div>
-    <-- <script>
-        var cbRemember = document.querySelector(".checkbox-remember")
-        cbRemember.addEventListener("change", function () {
-            if (cbRemember.checked) {
-                // Checkbox đã được chọn
-                cbRemember.classList.add("checked");
-                console.log(cbRemember)
-                console.log("check")
-            } else {
-                // Checkbox đã bị bỏ chọn
-                cbRemember.classList.remove("checked");
-                console.log(cbRemember)
-                console.log("uncheck")
-            }
-        });
-    </script>-->
+        var createAccountBtn = document.querySelector('.btn .btn-create-account');
 
-    <script >
-         var createAccountBtn = document.querySelector('.btn .btn-create-account');
-
-         createAccountBtn.addEventListener("click", function () {
+        createAccountBtn.addEventListener("click", function () {
             window.location.href = "/signup";
 
         })
 
-      
+
 
 
         function signup(event) {
@@ -225,10 +182,13 @@
 
                 console.log(response);
                 // Check if the response indicates a successful login and a redirection
-                {{!-- if (response.ok && response.redirected) {
-                    window.location.href = response.json().redirectUrl;
-                    
-                } --}}
+                {
+                    {
+                        !-- if (response.ok && response.redirected) {
+                            window.location.href = response.json().redirectUrl;
+
+                        } --}
+                }
 
                 // Optional: You can handle the data returned from the server if needed
                 const data = await response.json();
