--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <title>Document</title>
 </head>
 
@@ -156,7 +155,7 @@
 
     </div>
 
-    <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
+    {{!-- <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
     
     <script>
         // Bắt sự kiện khi hình ảnh được bấm
@@ -182,7 +181,7 @@
                 console.log("uncheck")
             }
         });
-    </script>-->
+    </script>--> --}}
 
     <script>
         var createAccountBtn = document.querySelector('.btn .btn-create-account');
