--- a/views/auth/signin.hbs
+++ b/views/auth/signin.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 
@@ -74,7 +75,9 @@
 
                         <div class="login-other-method">
                             <img src="assets/img/icons8-google-48.png" alt="" onclick="google()"><a
-                                href="/auth/google"></a></img>
+                                href="#"></a></img><img src="assets\img\icons8-facebook-48.png" alt=""><a
+                                href="#"></a></img><img src="assets\img\icons8-twitter-circled-48.png" alt=""><a
+                                href="#"></a></img>
                         </div>
                     </div>
 
@@ -155,7 +158,7 @@
 
     </div>
 
-    {{!-- <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
+    <!-- <img src="your_image.jpg" id="clickableImage" alt="Hình ảnh có thể bấm">
     
     <script>
         // Bắt sự kiện khi hình ảnh được bấm
@@ -166,7 +169,7 @@
     </script> 
         </div>
     </div>
-    <- <script>
+    <-- <script>
         var cbRemember = document.querySelector(".checkbox-remember")
         cbRemember.addEventListener("change", function () {
             if (cbRemember.checked) {
@@ -181,7 +184,7 @@
                 console.log("uncheck")
             }
         });
-    </script>--> --}}
+    </script>-->
 
     <script>
         var createAccountBtn = document.querySelector('.btn .btn-create-account');
