--- a/views/partials/headerGuest.hbs
+++ b/views/partials/headerGuest.hbs
@@ -17,7 +17,7 @@
             {{> logo}}
             <div class="links">
                 <a href="/">Home</a>
-                <a href="/">About Us</a>
+                <a href="/site/aboutUs">About Us</a>
                 <a href="/courses">Tutor</a>
                 <a href="/">Contact Us</a>
                 <a href="/login" class="btn">Become A Tutor</a>
