--- a/views/partials/headerTutor.hbs
+++ b/views/partials/headerTutor.hbs
@@ -38,7 +38,7 @@
                     {{> logo}}
                     <div class="links">
                         <a href="/tutor">Home</a>
-                        <a href="/tutor">About Us</a>
+                        <a href="/site/aboutUs">About Us</a>
                         <a href="/tutor/courses">Tutor</a>
                         <a href="/tutor">Contact Us</a>
                         <a href="/tutor/tutor-mode" class="btn">Tutor Mode</a>
