--- a/views/partials/headerUser.hbs
+++ b/views/partials/headerUser.hbs
@@ -25,7 +25,7 @@
             {{> logo}}
             <div class="links">
                 <a href="/user">Home</a>
-                <a href="/user">About Us</a>
+                <a href="/site/aboutUs">About Us</a>
                 <a href="/user/courses">Tutor</a>
                 <a href="/user/userMode" class="btn">USER MODE</a>
                 <a href="/user">Contact Us</a>
