--- a/views/admin/viewListAccount.hbs
+++ b/views/admin/viewListAccount.hbs
@@ -24,24 +24,14 @@
                 <div class="header--title">
                     <span>Primary</span>
 
-                    <h2>View Waiting List</h2>
+                    <h2>View Account List</h2>
                 </div>
                 <div class="user--infor">
                     <div class="search--box">
                         <i class="fa-solid fa-search"></i>
                         <input type="text" id="search-information" placeholder="Search">
                     </div>
-                    {{!-- <select class="form-select" id="search_selection" aria-label="search User">
-                        <option selected>Search by</option>
-                        <option value="fullname">Full Name</option>
-                        <option value="email">Email</option>
-
-                    </select> --}}
-
-
                 </div>
-
-                {{!-- <img src="\assets\img.jpg" alt=""> --}}
             </div>
             <div class="list-account-container">
                 <h3 class="main--title">List Account</h3>
@@ -76,7 +66,6 @@
                         <tfoot>
                             <tr>
                                 <td colspan="5">
-
                                 </td>
                             </tr>
                         </tfoot>
