--- a/views/admin/waitingTutor.hbs
+++ b/views/admin/waitingTutor.hbs
@@ -10,6 +10,8 @@
     <title>View Account List</title>
     <link rel="stylesheet" href="/assetsViewWaitingTutor/styleViewAccountList.css">
     <link rel="stylesheet" href="/pagination.css">
+    <link rel="stylesheet" href="/stylesheets/styleSideBarAdmin.css">
+
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
@@ -18,6 +20,7 @@
 </head>
 
 <body>
+    {{> SideBarAdmin}}
     <div class="page-view-account-list">
         <div class="main--content">
             <div class="header--wrapper">
