--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -48,7 +48,9 @@
    </div>
    {{> headerAdmin}}
    {{{body}}}
-  
+   {{> footer}}
+
+
    <script src="./javascripts/script.js"></script>
 </body>
 
