--- a/views/partials/SideBarAdmin.hbs
+++ b/views/partials/SideBarAdmin.hbs
@@ -12,7 +12,7 @@
 
         <ul class="menu">
             <li class="sidebar-icon li-dashboard">
-                <a href="/admin/dashboard" class="sidebar-icon a-dashboard">
+                <a href="/admin/" class="sidebar-icon a-dashboard">
                     <i class="fas fa-tachometer-alt"></i>
                     <span>Dashboard</span>
                 </a>
