--- a/views/partials/headerAdmin.hbs
+++ b/views/partials/headerAdmin.hbs
@@ -38,11 +38,11 @@
                     {{> logo}}
                     <div class="links">
                         <a href="/admin">Home</a>
-                        <a href="/site/aboutUs">About Us</a>
+                        <a href="/admin/editprofile">Admin Profile</a>
                         <a href="/admin/courses">Courses</a>
                         <a href="/admin/account">Account</a>
-                        <a href="/admin">Contact Us</a>
-                        <a href="/admin/tutor-mode" class="btn">Tutor Mode</a>
+                        <a href="/admin/waitingTutor">Tutor Wait List</a>
+                        {{!-- <a href="/admin/tutor-mode" class="btn">Tutor Mode</a> --}}
                         <a href="/logout">Logout</a>
                     </div>
 
