--- a/views/partials/headerAdmin.hbs
+++ b/views/partials/headerAdmin.hbs
@@ -38,7 +38,7 @@
                     {{> logo}}
                     <div class="links">
                         <a href="/admin">Home</a>
-                        <a href="/admin/editprofile">Admin Profile</a>
+                        <a href="/admin/profile">Admin Profile</a>
                         <a href="/admin/courses">Courses</a>
                         <a href="/admin/account">Account</a>
                         <a href="/admin/waitingTutor">Tutor Wait List</a>
