--- a/views/admin/category.hbs
+++ b/views/admin/category.hbs
@@ -148,6 +148,8 @@
                                             <div class="button"><a class="primary-btn" id="primary-btn">Submit</a></div>
                                         </div>
                                     </form>
+
+
                                 </div>
                             </div>
                         </div>
@@ -162,6 +164,7 @@
 
                                         <input type="text" id="search-tutor" placeholder="Search">
                                     </div>
+
                                 </div>
                                 <div class="right">
                                     <div class="col-8 col-xl-2 col-lg-2 col-sm-8 wrapper-sort-course">
@@ -218,9 +221,13 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="button"><a href="/admin/courses/create" class="primary-btn"
+                                    id="primary-btn">Create Course</a></div>
                             <div class="pagination">
                                 {{generatePaginationLinks pages currentPage prevPage nextPage role}}
+
                             </div>
+
                         </div>
                     </div>
                 </div>
