--- a/views/admin/viewListAccount.hbs
+++ b/views/admin/viewListAccount.hbs
@@ -20,7 +20,7 @@
 <body>
     <div class="page-view-account-list">
         <div class="main--content">
-            <div class="header--wrapper">
+            {{!-- <div class="header--wrapper">
                 <div class="header--title">
                     <span>Primary</span>
 
@@ -32,7 +32,7 @@
                         <input type="text" id="search-information" placeholder="Search">
                     </div>
                 </div>
-            </div>
+            </div> --}}
             <div class="list-account-container">
                 <h3 class="main--title">List Account</h3>
 
