--- a/views/admin/waitingTutor.hbs
+++ b/views/admin/waitingTutor.hbs
@@ -22,31 +22,8 @@
 <body>
     <div class="page-view-account-list">
         <div class="main--content">
-            <div class="header--wrapper">
-                <div class="header--title">
-                    <span>Primary</span>
-
-                    <h2>View Waiting List</h2>
-                </div>
-                <div class="user--infor">
-                    <div class="search--box">
-                        <i class="fa-solid fa-search"></i>
-                        <input type="text" id="search-information" placeholder="Search">
-                    </div>
-                    {{!-- <select class="form-select" id="search_selection" aria-label="search User">
-                        <option selected>Search by</option>
-                        <option value="fullname">Full Name</option>
-                        <option value="email">Email</option>
-
-                    </select> --}}
-
-
-                </div>
-
-                {{!-- <img src="\assets\img.jpg" alt=""> --}}
-            </div>
             <div class="list-account-container">
-                <h3 class="main--title">List Account</h3>
+                <h3 class="main--title">List Account Waiting Be Tutor</h3>
 
 
                 <div class="table-container">
