--- a/views/layouts/admin.hbs
+++ b/views/layouts/admin.hbs
@@ -14,18 +14,27 @@
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/js/lightgallery.min.js"></script>
 
-   <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
+   <style>
+      @import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);
+   </style>
    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-   <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
+   <style>
+      @import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);
+   </style>
    <script type="module" src="/javascripts/swiper-bundle.min.js"></script>
    <script type="module" src="/javascripts/script.js"></script>
-   <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
-   <style type="stylesheets">
-      @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
-   <style type="stylesheets">@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
-</style>
-   <style type="stylesheets">
-      @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);</style>
+   <style>
+      @import url(https://fonts.cdnfonts.com/css/prata-2);
+   </style>
+   <style>
+      @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);
+   </style>
+   <style>
+      @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
+   </style>
+   <style>
+      @import url(https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css);
+   </style>
 
 
 
