--- a/views/partials/headerAdmin.hbs
+++ b/views/partials/headerAdmin.hbs
@@ -37,13 +37,13 @@
                     </pattern>
                     {{> logo}}
                     <div class="links">
-                        <a href="/admin">Home</a>
-                        <a href="/admin/profile">Admin Profile</a>
-                        <a href="/admin/courses">Courses</a>
-                        <a href="/admin/account">Account</a>
-                        <a href="/admin/waitingTutor">Tutor Wait List</a>
+                        <a href="/admin" class="btn">Home</a>
+                        <a href="/admin/profile" class="btn">Admin Profile</a>
+                        <a href="/admin/courses" class="btn">Courses</a>
+                        <a href="/admin/account" class="btn">Account</a>
+                        <a href="/admin/waitingTutor" class="btn">Tutor Wait List</a>
                         {{!-- <a href="/admin/tutor-mode" class="btn">Tutor Mode</a> --}}
-                        <a href="/logout">Logout</a>
+                        <a href="/logout" class="btn">Logout</a>
                     </div>
 
                     <div id="menu-btn" class="fa fa-bars"></div>
