--- a/views/auth/updatePassword.hbs
+++ b/views/auth/updatePassword.hbs
@@ -11,14 +11,11 @@
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-
-
         <div class="wrapper-header">
             <div class="reset-interface row">
                 <div class="col-6  content-reset">
@@ -78,7 +75,7 @@
                 </div>
 
 
-                <div class="discriptions col-6">
+                {{!-- <div class="discriptions col-6">
                     <div class="wrapper-logo">
                         <img class="logo" src="assets\img\logo.png" alt="">
                     </div>
@@ -144,7 +141,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> --}}
             </div>
         </div>
 
@@ -166,7 +163,7 @@
 
                 const curUrl = new URL(window.location.href);
 
-                
+
                 const response = await fetch('{{layout}}/changePassword', {
                     method: 'POST',
                     headers: {
