--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -1444,6 +1444,7 @@ h4 {
     font-size: 2rem;
     text-transform: capitalize;
     color: #334;
+    text-decoration: none;
 }
 
 .header .navbar .links a:hover {
