--- a/views/tutor/contactToTutor.hbs
+++ b/views/tutor/contactToTutor.hbs
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="/assets/contacttutor.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>Document</title>
+
+
 </head>
 
 <body>
@@ -24,20 +27,19 @@
             <div class="col-6">
                 <div class="img-main-product">
                     <img class="main-img" src="/images/{{course.tutor.avatar}}" alt="">
-            </div>
+                </div>
             </div>
             <div class="col-6 container-method-contact">
                 <div class="header-product">{{course.tutor.fullname}} - {{course.name}}</div>
                 <div class="num-review">
                     <div class="rating">
-
                         {{course.average}}
                         <div class="star-1"></div>
                     </div>
                     ({{amountOfReviews}} Customer Reviews)
                 </div>
                 <div class="wrapper-price-product">
-                    <div class="price-product-current">{{course.discount}}</div>
+                    <div class="price-product-current">{{course.discount}}VNĐ</div>
 
                     <div class="price-product-origin">{{course.price}} VNĐ</div>
 
@@ -64,7 +66,7 @@
                             <img width="24" height="24" src="https://img.icons8.com/ios/24/mail.png" alt="mail" />
                         </div>
                         <div class="wrapper-contact-method">
-                            <div class="text-method">Write email</div>
+                            <div class="text-method">Write email?</div>
                             <div class="text-method-contact">{{course.tutor.email}}</div>
                         </div>
                     </li>
@@ -165,7 +167,7 @@
             };
 
             let isError = false;
-          
+
             try {
                 const response = await fetch(`/user/contactToTutor/${number}`, {
                     method: 'POST',
@@ -211,7 +213,7 @@
                             alertReview.style.display = "none";
                         }, 500);
                     }, 3000);
-                   
+
                 }
             } catch (error) {
                 console.error('Error:', error.message);
