--- a/views/auth/updatePassword.hbs
+++ b/views/auth/updatePassword.hbs
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="/assets/resetPassword.css">
+    <link rel="stylesheet" href="/assets/changePassword.css">
     <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -28,7 +28,6 @@
                         <div class="register">Change Password</div>
                     </div>
                     <div class="wrapper-content-reset">
-
                         <div class="instruction">
                             <hr> Let's enter correct old password <i class="ti-bell"></i>
                             <hr> Then enter new password <i class="ti-bell"></i>
