--- a/views/admin/detailUser.hbs
+++ b/views/admin/detailUser.hbs
@@ -26,7 +26,7 @@
 
     <div class="page-view-detail-account">
         <div class="main--content">
-            <div class="header--wrapper">
+            {{!-- <div class="header--wrapper">
                 <div class="header--title">
                     <span>Primary</span>
                     <h2>Information Form User</h2>
@@ -36,13 +36,8 @@
                         <i class="fa-solid fa-search"></i>
                         <input type="text" placeholder="Search detail account">
                     </div>
-
-
                 </div>
-
-
-
-            </div>
+            </div> --}}
             <div class="information-account-container">
                 <h3 class="main--title">User information</h3>
                 <div class="profile-account">
