--- a/views/admin/viewListAccount.hbs
+++ b/views/admin/viewListAccount.hbs
@@ -33,6 +33,33 @@
                     </div>
                 </div>
             </div> --}}
+            <div class="category-content">
+                <div class="sorter">
+                    <a href="#0" class="menu-trigger" trigger-button data-target="sidebar-filter">
+                        <i class="ri-filter-line"></i>
+                    </a>
+                    <div class="left">
+                        <div class="input-box">
+                            <i class="fas fa-search"></i>
+
+                            <input type="text" id="search-tutor" placeholder="Search">
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="col-8 col-xl-2 col-lg-2 col-sm-8 wrapper-sort-course">
+                            <select class="form-select" id="sort_selection" aria-label="Sort Course">
+                                <option selected>Sort accounts</option>
+                                <option value="name-asc">Name courses: A-Z</option>
+                                <option value="name-desc">Name course: Z-A</option>
+                                <option value="tutor-asc">Tutor: A-Z</option>
+                                <option value="tutor-desc">Tutor: Z-A</option>
+                                <option value="price-desc">Price, High to Low</option>
+                                <option value="price-asc">Price, Low to High</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="list-account-container">
                 <h3 class="main--title">List Account</h3>
 
